# spacecraft-pose-object-detection-runtime

./: .gitignore  Makefile  README.md
.github/workflows/: build-containers.yml
example_benchmark/: main.py
example_src/: assemble.py  main.py  main.sh
notebooks/: data-exploration-and-benchmark.ipynb
runtime/: Dockerfile  apt.txt  entrypoint.sh  environment.yml  run-tests.sh  validate.py
runtime/tests/: test_installs.py  test_packages.py  test_submission.py
scripts/: score.py
submission_src/: main.sh
submission_src/opencv-4.9.0/: CMakeLists.txt
submission_src/yolov9/: CMakeLists.txt
submission_src/yolov9/include/: detector.h  utils.h
submission_src/yolov9/models/: spacecraft.names
submission_src/yolov9/src/: detector.cpp  main.cpp  utils.cpp
